--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>The Shoppies</title>
-    <link rel='stylesheet' href='./index.css' >
+    <link rel='stylesheet' href='./style.css' >
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script defer src="./bundle.js" ></script>
   </head>
